Hide popup label to prevent broken layout

--- a/static/src/stylesheets/module/commercial/_paidfor.scss
+++ b/static/src/stylesheets/module/commercial/_paidfor.scss
@@ -31,6 +31,16 @@
         overflow: visible;
     }
 
+    .paidfor-meta__more .popup__toggle__label {
+        @include mq(leftCol) {
+            display: none;
+        }
+
+        @include mq(wide) {
+            display: inline;
+        }
+    }
+
     .commercial__title {
         font-size: get-font-size(headline, 4);
     }
